# spmv-bench

./: .gitignore  CMakeLists.txt  Makearm  Makefile  bell.py  config.mk  fetch-data.sh  filter.csv  generate.sh  plot-study1.py  plot-study2.py  plot-study3.py  plot-study3_1.py  plot-study4.py  plot-study5.py  plot-study6.py  plot-study7.py  plot-study8.py  plot-study9.py  plot.py  plot.sh  process.py  run-arm.out  run-arm.sh  run-carina.sh  run-intel.out  run-intel.sh  run-test.sh  run.mk  run.sh  test-plot.py
csv/: 1024x1024.csv  1024x16.csv  1024x32.csv  1024x512.csv  1024x64.csv  1024x8.csv  512x128.csv  512x16.csv  512x32.csv  512x512.csv  512x64.csv  512x8.csv  bcsstk17.csv  cant.csv  csr.csv  pdb1HYS.csv  rma10.csv
data/: 1024x16.mtx  1024x32.mtx  1024x8.mtx  512x128.mtx  512x16.mtx  512x32.mtx  512x512.mtx  512x8.mtx  bell.mtx
lib/: CMakeLists.txt  bcsr.h  bell.h  csr.h  ell.h  spmm.cpp  spmm.h
misc/: plot.sh  process.py  run.sh
report.old/csv/: 1024x1024.csv  1024x16.csv  512x128.csv  512x16.csv  512x32.csv  512x8.csv  bcsstk17.csv
scripts/: fix.py  plot-study1.py  plot-study2.py  plot-study3.py  plot-study3_1.py  plot-study5.py  plot-study6.py  plot-study9.py
src/: format_bcsr.cpp  main.cpp  spmm.cpp  spmm.h
src/bcsr/: bcsr.h  (+10 more)
test/: CMakeLists.txt  bell.mtx  print.cpp  print_bcsr.cpp  print_bell.cpp  print_coo.cpp  print_csr.cpp  print_ell.cpp  square.mtx
test/gpu/: gpu_csr1.cu  gpu_print_bcsr.cpp  gpu_print_coo.cpp  gpu_print_csr.cpp  gpu_print_ell.cpp  gpu_test1.cu  omp_test1.cpp  print_bcsr2.cpp  print_coo2.cpp  print_csr2.cpp  print_ell2.cpp
(+2171 files in other folders)
